compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_unary_expr-2.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := +"

---
database:
nodes:
HirId(Idx::<HirNode>(0)) (Span { file: None, range: 0..1 }): Expr(Name(Name(UseId(DefId(0), 0))))
HirId(Idx::<HirNode>(1)) (Span { file: None, range: 0..0 }): Expr(Missing)
HirId(Idx::<HirNode>(2)) (Span { file: None, range: 5..6 }): Expr(Unary(Unary { op: Spanned(Identity, Span { file: None, range: 5..6 }), rhs: ExprId(HirId(Idx::<HirNode>(1))) }))
HirId(Idx::<HirNode>(3)) (Span { file: None, range: 0..6 }): Stmt(Assign(Assign { lhs: ExprId(HirId(Idx::<HirNode>(0))), op: Spanned(None, Span { file: None, range: 2..4 }), rhs: ExprId(HirId(Idx::<HirNode>(2))) }))
HirId(Idx::<HirNode>(4)) (Span { file: None, range: 0..6 }): Unit(Unit { id: UnitId(HirId(Idx::<HirNode>(4))), stmts: [StmtId(HirId(Idx::<HirNode>(3)))], tracked_defs: [DefId(0)], tracked_uses: [UseId(DefId(0), 0)] })

root stmts:
[StmtId(HirId(Idx::<HirNode>(3)))]
symtab:
DefId(0): (Span { file: None, range: 0..1 }, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): Span { file: None, range: 0..1 }

