compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_unary_expr.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := + a"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..8): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..8): []
        Assign@(FileId(1), 0..8): None
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Unary@(FileId(1), 5..8): Identity
            Name@(FileId(1), 7..8): "a"@(FileId(1), 0..1), undeclared

