compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_var_def-2.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "var a : int"

---
database:
nodes:
HirId(Idx::<HirNode>(0)) (Span { file: None, range: 8..11 }): Type(Primitive(Int))
HirId(Idx::<HirNode>(1)) (Span { file: None, range: 0..11 }): Stmt(ConstVar(ConstVar { is_register: false, is_const: false, names: [DefId(0)], tail: TypeSpec(TypeId(HirId(Idx::<HirNode>(0)))) }))
HirId(Idx::<HirNode>(2)) (Span { file: None, range: 0..11 }): Unit(Unit { id: UnitId(HirId(Idx::<HirNode>(2))), stmts: [StmtId(HirId(Idx::<HirNode>(1)))], symbol_table: SymbolTable { defs: {DefId(0): Symbol { name: "a", kind: Declared, is_pervasive: false, def_id: DefId(0), next_use: 0 }}, def_spans: {DefId(0): Span { file: None, range: 4..5 }}, use_spans: {}, next_def: 1 } })

root stmts:
[StmtId(HirId(Idx::<HirNode>(1)))]
symtab:
DefId(0): (Span { file: None, range: 4..5 }, Symbol { name: "a", kind: Declared, is_pervasive: false, def_id: DefId(0), next_use: 0 })

