compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_var_def-4.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "var a := a"

---
database:
nodes:
HirId(Idx::<HirNode>(0)) (Span { file: None, range: 9..10 }): Expr(Name(Name(UseId(DefId(0), 0))))
HirId(Idx::<HirNode>(1)) (Span { file: None, range: 0..10 }): Stmt(ConstVar(ConstVar { is_register: false, is_const: false, names: [DefId(1)], tail: InitExpr(ExprId(HirId(Idx::<HirNode>(0)))) }))
HirId(Idx::<HirNode>(2)) (Span { file: None, range: 0..10 }): Unit(Unit { id: UnitId(HirId(Idx::<HirNode>(2))), stmts: [StmtId(HirId(Idx::<HirNode>(1)))], symbol_table: SymbolTable { defs: {DefId(0): Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 }, DefId(1): Symbol { name: "a", kind: Declared, is_pervasive: false, def_id: DefId(1), next_use: 0 }}, def_spans: {DefId(0): Span { file: None, range: 9..10 }, DefId(1): Span { file: None, range: 4..5 }}, use_spans: {UseId(DefId(0), 0): Span { file: None, range: 9..10 }}, next_def: 2 } })

root stmts:
[StmtId(HirId(Idx::<HirNode>(1)))]
symtab:
DefId(0): (Span { file: None, range: 9..10 }, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
DefId(1): (Span { file: None, range: 4..5 }, Symbol { name: "a", kind: Declared, is_pervasive: false, def_id: DefId(1), next_use: 0 })
UseId(DefId(0), 0): Span { file: None, range: 9..10 }

