compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_var_def-5.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: var a

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..5): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..5): []
error in file FileId(1) at 4..5: expected ‘,’, ‘:’ or ‘:=’ after here

