compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_var_def-6.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "var a, b, c := 0"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(3)
    Module@(FileId(1), 0..16): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..16): []
        Block@(FileId(1), 0..16): ItemGroup
          StmtItem@(FileId(1), 0..16): ItemId(0)
            ConstVar@(FileId(1), 0..16): var "a"@(FileId(1), 4..5)
              ExprBody@(FileId(1), 15..16)
                Literal@(FileId(1), 15..16): Integer(0)
          StmtItem@(FileId(1), 0..16): ItemId(1)
            ConstVar@(FileId(1), 0..16): var "b"@(FileId(1), 7..8)
              ExprBody@(FileId(1), 15..16)
                Literal@(FileId(1), 15..16): Integer(0)
          StmtItem@(FileId(1), 0..16): ItemId(2)
            ConstVar@(FileId(1), 0..16): var "c"@(FileId(1), 10..11)
              ExprBody@(FileId(1), 15..16)
                Literal@(FileId(1), 15..16): Integer(0)

