compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_var_def.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "var a := b"

---
database:
nodes:
HirId(Idx::<HirNode>(0)) (Span { file: None, range: 9..10 }): Expr(Name(Name(UseId(DefId(0), 0))))
HirId(Idx::<HirNode>(1)) (Span { file: None, range: 0..10 }): Stmt(ConstVar(ConstVar { is_register: false, is_const: false, names: [DefId(1)], tail: InitExpr(ExprId(HirId(Idx::<HirNode>(0)))) }))

root stmts:
[StmtId(HirId(Idx::<HirNode>(1)))]
symtab:
DefId(0): (Span { file: None, range: 9..10 }, Symbol { name: "b", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
DefId(1): (Span { file: None, range: 4..5 }, Symbol { name: "a", kind: Declared, is_pervasive: false, def_id: DefId(1), next_use: 0 })
UseId(DefId(0), 0): Span { file: None, range: 9..10 }

